# src/main/resources/static/swagger.yaml
@@ -34,6 +34,38 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Country'
+  /language_fetch:
+    get:
+      tags:
+        - languages
+      summary: Fetch all languages
+      description: Fetch all languages from the database
+      operationId: fetchAllLanguages
+      responses:
+        '200':
+          description: A list of languages
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Language'
+    post:
+      tags:
+        - languages
+      operationId: addLanguage
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Language'
+      responses:
+        '200':
+          description: Language added successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Language'
 components:
   schemas:
     Country:
